--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,3 +1,5 @@
+<!-- Este archivo 'header.ejs' contiene la sección de encabezado compartida en varias páginas -->
+
 <!doctype html>
 <html lang="es">
 <head>
@@ -5,31 +7,32 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>App</title>
-    <!--Bootstrap-->
+    <!-- Enlace al archivo de estilo Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <!--DataTables-->
+    <!-- Enlace al archivo de estilo DataTables -->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
-
 </head>
 <body>
+<!-- Encabezado de navegación -->
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
+            <!-- Enlace al inicio de la aplicación -->
             <a class="navbar-brand" href="/">Optica Naida</a>
+            <!-- Botón desplegable para la navegación en dispositivos móviles -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <!-- Enlace para ver las facturas -->
                     <li class="nav-item">
                         <a class="nav-link" href="/listarfacturas">Ver Facturas</a>
                     </li>
-
+                    <!-- Agrega más enlaces según sea necesario -->
                 </ul>
-
+                <!-- Otras opciones de navegación o elementos del encabezado -->
             </div>
         </div>
     </nav>
 </header>
-
-
